OO-4808: max score calculated from sections selection